force-app/main/default/objects/Master_Holiday__c/fields/Active_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Active_Date_F__c</fullName>
    <formula>Active_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Date F</label>
    <type>Date</type>
</CustomField>