force-app/main/default/objects/Master_Holiday__c/fields/Active_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Active_Date_Time__c</fullName>
    <label>Active Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>