force-app/main/default/objects/Master_Holiday__c/fields/Calculate_Range_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Range_Date__c</fullName>
    <formula>End_Date_Time__c -  Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Range Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>