force-app/main/default/objects/Master_Holiday__c/fields/Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Description_EN__c</fullName>
    <label>Description EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>