force-app/main/default/objects/Master_Holiday__c/fields/Description_ID__c.field-meta.xml
<CustomField>
    <fullName>Description_ID__c</fullName>
    <label>Description ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>