force-app/main/default/objects/Master_Holiday__c/fields/Email_Footer__c.field-meta.xml
<CustomField>
    <fullName>Email_Footer__c</fullName>
    <label>Email Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>