force-app/main/default/objects/Master_Holiday__c/fields/Email_Header__c.field-meta.xml
<CustomField>
    <fullName>Email_Header__c</fullName>
    <label>Email Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>