force-app/main/default/objects/Master_Holiday__c/fields/Email_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Template</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>Master Holidays</relationshipLabel>
    <relationshipName>Master_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>