force-app/main/default/objects/Master_Holiday__c/fields/End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>End_Date_F__c</fullName>
    <description>DATEVALUE(End_Date_Time__c) -1</description>
    <formula>DATEVALUE(End_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date F</label>
    <type>Date</type>
</CustomField>