force-app/main/default/objects/Master_Holiday__c/fields/Month_EN_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_EN_Active_Date__c</fullName>
    <formula>CASE(
  MONTH(Active_Date__c),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;Augusts&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month EN (Active Date)</label>
    <type>Text</type>
</CustomField>