force-app/main/default/objects/Master_Holiday__c/fields/Month_ID_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_ID_Active_Date__c</fullName>
    <formula>CASE(
  MONTH(Active_Date__c),
  1, &quot;Januari&quot;,
  2, &quot;Februari&quot;,
  3, &quot;Maret&quot;,
  4, &quot;April&quot;,
  5, &quot;Mei&quot;,
  6, &quot;Juni&quot;,
  7, &quot;Juli&quot;,
  8, &quot;Agustus&quot;,
  9, &quot;September&quot;,
  10, &quot;Oktober&quot;,
  11, &quot;November&quot;,
  &quot;Desember&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month ID (Active Date)</label>
    <type>Text</type>
</CustomField>