force-app/main/default/objects/Master_Holiday__c/fields/Start_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_F__c</fullName>
    <formula>DATEVALUE(Start_Date_Time__c) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date F</label>
    <type>Date</type>
</CustomField>