force-app/main/default/objects/Master_Holiday__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekend</fullName>
            </value>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>