force-app/main/default/objects/Master_Holiday__c/validationRules/End_DateTime_Less_than_Start_DateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>End_DateTime_Less_than_Start_DateTime</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_Time__c  &gt; End_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Cannot be less than Start Date &amp; Time</errorMessage>
</ValidationRule>