force-app/main/default/objects/Master_Holiday__c/validationRules/Validation_Type_Holiday.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Type_Holiday</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(Type__c , &apos;Holiday&apos;), OR ( ISBLANK(Start_Date_Time__c), ISBLANK(End_Date_Time__c)))</errorConditionFormula>
    <errorMessage>Please Input Start Date &amp; Time and End Date Time</errorMessage>
</ValidationRule>